# npm-audit-to-report

./: .gitignore  .golangci.yml  .goreleaser.yaml  Cargo.toml  README.md  dependency-audit-only-when-detected.yml  dependency-audit.yml  go.mod  go.sum  justfile  main.go
.github/: dependabot.yml
.github/workflows/: build-and-release.yml  build.yml  ci.yml  golangci-lint.yml  goreleaser.yml  lint.yml
src/: main.rs
